[package]
name = "call-opt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
solana-program = "1.9.9"
arrayref = "0"
sha2 = "0"

[dev-dependencies]
solana-program-test = "1.10.5"
solana-sdk = "1.10.5"
spl-associated-token-account = "1.0.3"

[lib]
crate-type = ["cdylib", "lib"]
